# Part_Number_Finder_Beta

./: .gitignore  README.md  User_Guide.md  claude_ref.md  main.py  pyproject.toml  run_batch_eval.py
data/: aliases.json  langfuse_partfinder_test_questions_50cases.csv  part_numbers.csv  search_failures.jsonl  semantic_hints.json
scripts/: build_vector_index.py  generate_dummy_data.py  preprocess_txt_to_csv.py
src/part_finder/: __init__.py  agent.py  config.py  data_loader.py  final_responder.py  formatter.py  llm_router.py  normalizer.py  rag_index.py  search.py  tracing.py  vector_index.py
tests/: conftest.py  test_agent.py  test_agentic_semantic.py  test_config.py  test_dummy_data.py  test_formatter.py  test_langfuse_tracing.py  test_normalizer.py  test_rag_index.py  test_search.py
