[project]
name = "0-basic-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "openai>=2.32.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "langchain>=1.2.15",
    "langgraph>=1.1.9",
    "deepagents>=0.5.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "huggingface-hub>=1.12.0",
    "langfuse>=4.5.1",
    "langsmith>=0.7.36",
    "dotenv>=0.9.9",
    "tavily>=1.1.0",
    "typing>=3.10.0.0",
    "prompts>=0.0.1",
    "rapidfuzz>=3.14.3",
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
